sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:11: error: not found: value ech
	}while(ech)
               ^